index.css
/* ... */
/* :focus {
  border: 2px solid #5e5e5e;
} */

body {
  font-family: "Poppins", sans-serif;
  overflow-x: hidden;
}

button {
  font-family: "Poppins", sans-serif;
  cursor: pointer;
}

.observerAnimation {
  animation: observerAnimation 3s ease;
}

@keyframes observerAnimation {
  from {
    transform: translateY(100px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

#container {
  max-width: 100rem;
  width: 100%;
}

#wrapper {
  padding: 2rem 6rem;
  transition: transform 2s ease;
}

.section--hidden {
  opacity: 0;
  transform: translateY(8rem);
}
/* 
* -------------------
*  navigation styling
* ------------------
*/
.navbar {
  display: flex;
  align-items: center;

  justify-content: space-between;
  padding: 1rem 5rem;

  background: #f6f6f6;
}

.nav_items,
.navbar_icons {
  display: flex;
  align-items: center;
  gap: 15px;
}

.nav_item a {
  color: #929292;
  transition: all 0.3 ease;
}

.nav_item a:hover {
  color: #3a3a3a;
}

.navbar_form {
  background-color: #e4e4e4;
  padding: 10px 15px;

  display: flex;
  gap: 10px;
  align-items: center;
  border-radius: 8px;
  transition: all 0.3s ease;
}

.navbar_form i {
  color: #898989;
}

.navbar_form input {
  width: 100%;
  background: none;
}

.navbar_form input:focus {
  border: none;
}

.navbar_form:focus-within {
  background-color: #d7d7d7;
}

.navbar_icons i {
  color: #898989;
}

.navbar_icons button {
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #e4e4e4;
  transition: all 0.2s ease;
}

.navbar_icons button:hover {
  background-color: #d7d7d7;
}

.sidebar_btn {
  display: none;
}

/* 
* -------------------
*  header styling
* ------------------
*/
.header {
  position: relative;
  height: 700px;
  width: 100%;
}

.slider_btn {
  width: 60px;
  height: 60px;
  position: absolute;
  top: 40%;
  font-size: 30px;
  cursor: pointer;
  background: none;
  border: 1px solid #f1f1f1db;
  color: #f1f1f1db;
}

.slider_btn--right {
  right: 20px;
}

.slider_btn--left {
  left: 20px;
}

.slider {
  position: absolute;
  width: 100%;
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding: 8rem;
  color: #ffff;

  background-position: center;
  background-size: cover;

  transition: transform 0.3s ease;
}

.slider h1 {
  width: 600px;
  font-size: 5rem;
  line-height: 80px;
  letter-spacing: 1px;
}

.slider p {
  font-size: 20px;
}

.slider button {
  background: #f3f3f3;
  width: 180px;
  height: 40px;
  border-radius: 7px;

  font-size: 15px;
  font-weight: 500;

  color: #343434;
}

/* 
* -------------------
*  box container styling
* ------------------
*/
.box_container {
  display: flex;
  gap: 3rem;
}

.box_container .box {
  width: 600px;
  height: 300px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;

  padding-left: 30px;
  border-radius: 8px;
  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
    0 8px 10px -6px rgb(0 0 0 / 0.1);

  background-size: cover;
  background-position: center;

  color: #ffff;
}

.box_container .box a {
  color: #ffff;
  text-decoration: underline;
}

.box_container .box_1 {
  background-image: url("./images/box_image_1.jpg");
}

.box_container .box_2 {
  background-image: url("./images/box_image_2.jpg");
}

/**
------------------------
*  New Arrival 
------------------------
*/
.section {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.section .header {
  height: 20px;

  display: flex;
  align-items: center;
  border-left: 4px solid #2a0bf4;
}

.section .header h1 {
  font-size: 24px;
  margin-left: 17px;
  font-weight: 600;
  color: #373737;
}

.arrivals {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 1rem;
}

.arrival img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: 10px;
}

.arrival h1 {
  font-size: 15px;
  color: #373737;
  text-align: right;
}

/**
------------------------
*  Big Zone
------------------------
*/
.big_zone_items {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.big_zone_item_1 {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 30px;
}

.big_zone_item_2 {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 30px;
}

.big_zone_item {
  height: 400px;
  display: flex;
  align-items: center;
  padding-left: 2rem;
  gap: 2rem;

  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: 10px;
  color: #ffff;
}

.big_zone_item_right {
  justify-content: flex-end;
  color: #343333;
}

.big_zone_item_right .big_zone_item_container button {
  color: black;
  border: 1px solid black;
}

.big_zone_item > div {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.big_zone_item_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: flex-start;
  gap: 1rem;
}

.big_zone_item h1 {
  width: 150px;
  align-self: flex-start;
}

.big_zone_item h5 {
  align-self: flex-start;
  font-size: 19px;
  font-weight: 600;
  text-transform: capitalize;
}

.big_zone_item p {
  font-size: 11px;
  align-self: flex-start;
}

.big_zone_item button {
  width: 100px;
  height: 30px;
  border-radius: 3px;
  background: none;

  border: 1px solid #ffff;
  color: #ffff;
}

.big_zone_item_1 .big_zone_item:nth-child(1) {
  background-image: url(./images/zone_1.png);
}

.big_zone_item_1 .big_zone_item:nth-child(2) {
  background-image: url(./images/zone_2.png);
}

.big_zone_item_1 .big_zone_item:nth-child(3) {
  background-image: url(./images/zone_3.png);
}

.big_zone_item_2 .big_zone_item:nth-child(1) {
  background-image: url(./images/zone_4.png);
}

.big_zone_item_2 .big_zone_item:nth-child(2) {
  background-image: url(./images/zone_5.png);
}

/* 
* -------------------
*  Leave & Family
* ------------------
*/
.leave_family {
  display: flex;
  height: 80vh;
}
/* ... */

